fix slick button

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                     <h3 class="img-icon">
                         <div class="line"></div>
                         <img src="images/icon-1.png" alt="">
-                        <span class="bold">START</span> START DOING THAT
+                        <span class="bold">START</span> DOING THAT
                         <img src="images/icon-2.png" alt="">
                         <div class="line"></div>
                     </h3>
@@ -757,24 +757,26 @@
 </section>
 <div class="intro">
     <div class="container-fluid">
-        <div class="slider-1">
-            <div class="container">
-                <button class="btn btn-primary">ALEXIS SIMPSON - CEO & Developer</button>
-                <p class="txt-intro"> Lorem ipsum dolor sit amet, laudantium, totam rem. Morbi sagittis, sem quis lacinia faucibus, orci ipsum
-                    gravida tortor, vel interdum mi sapien ut justo consequat magna, id molestie ipsum volutpat quis.
-                </p>
-            </div>
-            <div class="container">
-                <button class="btn btn-primary">ALEXIS SIMPSON - CEO & Developer</button>
-                <p class="txt-intro"> Lorem ipsum dolor sit amet, laudantium, totam rem. Morbi sagittis, sem quis lacinia faucibus, orci ipsum
-                    gravida tortor, vel interdum mi sapien ut justo consequat magna, id molestie ipsum volutpat quis.
-                </p>
-            </div>
-            <div class="container">
-                <button class="btn btn-primary">ALEXIS SIMPSON - CEO & Developer</button>
-                <p class="txt-intro"> Lorem ipsum dolor sit amet, laudantium, totam rem. Morbi sagittis, sem quis lacinia faucibus, orci ipsum
-                    gravida tortor, vel interdum mi sapien ut justo consequat magna, id molestie ipsum volutpat quis.
-                </p>
+        <div class="container">
+            <div class="slider-1">
+                <div class="container">
+                    <button class="btn btn-primary">ALEXIS SIMPSON - CEO & Developer</button>
+                    <p class="txt-intro"> Lorem ipsum dolor sit amet, laudantium, totam rem. Morbi sagittis, sem quis lacinia faucibus, orci ipsum
+                        gravida tortor, vel interdum mi sapien ut justo consequat magna, id molestie ipsum volutpat quis.
+                    </p>
+                </div>
+                <div class="container">
+                    <button class="btn btn-primary">ALEXIS SIMPSON - CEO & Developer</button>
+                    <p class="txt-intro"> Lorem ipsum dolor sit amet, laudantium, totam rem. Morbi sagittis, sem quis lacinia faucibus, orci ipsum
+                        gravida tortor, vel interdum mi sapien ut justo consequat magna, id molestie ipsum volutpat quis.
+                    </p>
+                </div>
+                <div class="container">
+                    <button class="btn btn-primary">ALEXIS SIMPSON - CEO & Developer</button>
+                    <p class="txt-intro"> Lorem ipsum dolor sit amet, laudantium, totam rem. Morbi sagittis, sem quis lacinia faucibus, orci ipsum
+                        gravida tortor, vel interdum mi sapien ut justo consequat magna, id molestie ipsum volutpat quis.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
